# aws-open-resource-broker

./: .actrc  .coveragerc  .env.example  .flake8  .gitattributes  .gitignore  .importlinter  .pre-commit-config.yaml  .project.yml  .trivyignore  :wq!  AGENTS.md  ANALYSIS_STORAGE_EVENTS_REGRESSION.md  ANALYSIS_SUMMARY.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_CLI_QA_TEST_REPORT.md  CONTRIBUTING.md  Dockerfile  EXECUTIVE_SUMMARY_STORAGE_EVENTS.md  IMPLEMENTATION_GUIDE_STORAGE_EVENTS.md  IMPORT_GUARDS_IMPLEMENTATION_GUIDE.md  ISP_REFACTORING_SUMMARY.md  ISP_VERIFICATION_REPORT.md  LICENSE.spdx  MAINTAINERS.md  MANIFEST.in  Makefile  NOTICE  PACKAGE_TESTING_STRATEGY_IMPLEMENTATION.md  PHASE_3_4_COMPLETION_SUMMARY.md  QA_INFRASTRUCTURE_COMMANDS_TEST_REPORT.md  QA_REQUESTS_MACHINES_TEST_REPORT.md  QA_SYSTEM_OPERATIONS_TEST_REPORT.md  QUICK_REFERENCE_DOMAIN_VS_INFRASTRUCTURE_EVENTS.md  README.md  README_REGRESSION_ANALYSIS.md  REGRESSION_1_COMPLETE_ANALYSIS.md  REGRESSION_1_FILE_INDEX.md  REGRESSION_3_ANALYSIS.md  (+41 more)
.claude/hooks/: on-file-write.sh
.githooks/: README.md  pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/codeql/: codeql-config.yml
.github/workflows/: advanced-metrics.yml  auto-release-alpha.yml  auto-release-beta.yml  auto-release-stable.yml  cache-management.yml  changelog-validation.yml  changelog.yml  ci-quality.yml  ci-tests.yml  ci.yml  codeql.yml  container-build.yml  container-cleanup-dev.yml  container-cleanup-on-release.yml  container-cleanup.yml  container.yml  dependabot.yml  dev-containers.yml  dev-publish.yml  dev-pypi.yml  docs.yml  health-monitoring.yml  manual-promote.yml  package-testing.yml  process-beta-trigger.yml  process-rc-approval.yml  prod-release.yml  production-release.yml  publish.yml  release-management.yml  reusable-security.yml  reusable-test.yml  sbom.yml  scorecard.yml  sdk-go.yml  security-code.yml  security-container.yml  security.yml  semantic-release.yml  shared-config.yml  (+3 more)
.kiro/: CONTAINER_BUILD_OPTIMIZATION.md  INIT_IMPROVEMENTS_NEXT_STEPS.md
awscpinst/config/: awsprov_templates.json  templates.json  user_data.sh
backlog/: ALL_FLAG_AUDIT_2026-02-19.md
config/: README.md  aws-default_templates.json  aws-dev_templates.json  aws_default_eu-west-2_templates.json  aws_flamurg-testing-Admin_eu-west-2_templates.json  aws_templates.json  config.example.json  default_config.json  k8s_templates.json  templates.json  test-multi-provider.json
deployment/docker/: docker-compose.embedded.yml  docker-compose.prod.yml  docker-compose.split.yml  docker-compose.yml  docker-entrypoint.sh
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev-tools/admin/: README.md  cleanup_orb_resources.py  list_terminate_active_fleets.py  terminate_req_instances.py
dev-tools/ci/: check_requirements.sh  ci_security_dispatcher.py  run_dev_checks.sh  run_ui_smoke.sh
dev-tools/container/: calculate_tags.sh  container_build.sh  container_dispatcher.py  container_health_check.py
dev-tools/docker/: Dockerfile.dev-tools
dev-tools/docs/: ci_docs_build.sh  ci_docs_build_for_pages.sh  docs_dispatcher.py  mike_deploy.sh  smoke_check_pages.sh
dev-tools/install/: install.sh
dev-tools/integrated/: release_orchestrator.sh  unified_publisher.sh
dev-tools/package/: build.sh  build_ui.sh  generate_pyproject.py  install_dev.sh  publish.sh  test-install.sh  test_install.sh  version-bump.sh  version_bump.sh
dev-tools/quality/: check_architecture.py  dev_tools_runner.py  quality_check.py  quality_dispatcher.py  validate_cqrs.py  validate_imports.py  validate_shell_scripts.py  validate_workflows.py
dev-tools/release/: analyze_rc_readiness.sh  build_historical.sh  changelog_manager.py  conditional_release.sh  create_changelog_pr.sh  create_release.sh  delete_release.sh  dry_run_release.sh  export_openapi_spec.sh  generate_rc_analysis.sh  historical_release.sh  orchestrator.sh  promote_manager.sh  publisher.sh  release_backfill.sh  release_creator.sh  release_dispatcher.py  release_notes.sh  update_release_notes.sh  version_manager.sh
dev-tools/scripts/: check_architecture.py  check_file_sizes.py  ci_check.py  ci_docs_build.sh  ci_docs_build_for_pages.sh  ci_docs_deploy.sh  ci_security.py  clean_whitespace.py  clean_whitespace.sh  container-build.sh  container_build.sh  container_health_check.py  deps_manager.py  dev_tools_runner.py  format_code.py  generate-pyproject.py  generate_pyproject.py  generate_sbom.py  hadolint_check.py  install_completions.sh  install_dev_tools.py  pre_commit_check.py  pre_commit_check.sh  quality_check.py  quick_start.py  quick_start.sh  run_dev_checks.sh  run_tool.sh  security_check.py  security_container.py  test-docker.sh  uv_manager.py  validate_actionlint.py  validate_cqrs.py  validate_imports.py  validate_shell_scripts.py  validate_workflows.py  venv_setup.py  workflow_orchestrator.py
dev-tools/security/: detect_credentials.py  detect_secrets.py  security_check.py  security_container.py  security_scan.py  (+1 more)
docs/: field_mapping_architecture.md  filtering.md  installation.md  mkdocs.yml  native-spec-guide.md
documentation/: conf.py
examples/: sdk_usage.py
k8s/: CONTRIBUTING.md  NOTICE  README.md  constraints.txt
k8s-legacy/: .gitignore  AGENTS.md  README.md  constraints.txt  create_dev_venv.sh  default.nix  makevenv.sh
makefiles/: changelog.mk  ci.mk  common.mk  deploy.mk  dev.mk  providers.mk  quality.mk
scripts/: invoke_provider.sh  templateWizard.sh
src/: README.md  __init__.py  _package.py  bootstrap.py  run.py
tests/: __init__.py  conftest.py  conftest_simple.py  test-docker.sh  test_basic_functionality.py  test_end_to_end.py  test_field_mapping_integration.py  test_import_guards.py  test_import_validation.py  test_injectable_migration.py  test_logging_fixes.py  test_logging_integration.py  test_machines_start.py  test_platform_dirs.py  test_provider_strategy_examples.py  test_setup.py
tools/: compute-liveness  configure-pod-params  push-cmp-logs  sync-registry-creds
visualise/: visualise.py
(+3018 files in other folders)
